--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Tailwind base/components/utilities (added for Tailwind support) */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -22,12 +28,19 @@ a:hover {
   color: #535bf2;
 }
 
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  min-width: 100%;
   min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
